test scaling issues on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+@-ms-viewport{
+    width: device-width;
+}
+
 body {
     margin: 0;
     display:grid;
